--- a/Pipfile
+++ b/Pipfile
@@ -5,14 +5,21 @@ name = "pypi"
 
 [packages]
 ipdb = "0.13.9"
-flask = "*"
-flask-sqlalchemy = "3.0.3"
 Werkzeug = "2.2.2"
-flask-migrate = "*"
 sqlalchemy-serializer = "*"
-flask-restful = "*"
-flask-cors = "*"
 faker = "*"
+flask = "*"
+flask-cors = "*"
+flask-restful = "*"
+flask-sqlalchemy = "*"
+flask-marshmallow = "*"
+flask-bcrypt = "*"
+flask-migrate = "*"
+python-dotenv = "*"
+marshmallow-sqlalchemy = "*"
+flask-session = "*"
 
 [requires]
 python_full_version = "3.8.13"
+
+[dev-packages]
